Fix modal foreground colors

--- a/Template/css/main.css
+++ b/Template/css/main.css
@@ -35,3 +35,6 @@ table.table-striped tr:nth-child(2n+1) {
 .sidebar > ul a:hover, .dropdown-menu-link-text, .dropdown-menu-link-icon, .action-menu, a:hover, .sidebar > ul li.active a, .sidebar > ul li.active a:focus, .sidebar > ul li.active a:hover, .page-header h2 a, h1, h2, h3, .dashboard-table-link {
     color: #fff;
 }
+#modal-content,  #modal-content h2 {
+    color: #000;
+}
