Add some useful classes

--- a/Template/css/main.css
+++ b/Template/css/main.css
@@ -1,6 +1,6 @@
 body {
     color: #fff;
-    background-color: #222;
+    background-image: url("https://lh6.googleusercontent.com/OBVMhUDBAQwH6Nef1f4OoqGODNA_PzACC468VPqYuZF2PoVHx-YIpTmm0ZINeuVfyBNtZD57SAZvEQ=w1853-h951")
 }
 
 .ui-tooltip a, a, table th a {
@@ -20,9 +20,12 @@ table td {
 table#board td a:hover {
     color: #000;
 }
+.table-list{
+    background-color: violet;
+}
 
-table.table-striped tr:nth-child(2n+1) {
-    background-color: #444;
+.table-list-row.table-border-left:nth-child(2n+1) {
+    background-color: red
 }
 
 .accordion-title > h3, .views-switcher-component, .task-board-icons, .dropdown-submenu-open {
@@ -33,8 +36,12 @@ table.table-striped tr:nth-child(2n+1) {
     color: #000;
 }
 
-.sidebar > ul a:hover, .dropdown-menu-link-text, .dropdown-menu-link-icon, .action-menu, a:hover, .sidebar > ul li.active a, .sidebar > ul li.active a:focus, .sidebar > ul li.active a:hover, .page-header h2 a, h1, h2, h3, .dashboard-table-link {
-    color: #fff;
+.sidebar ul li.active{
+    background-color: red;
+}
+
+.sidebar ul li.active a{
+    color: white;
 }
 
 #modal-box {
@@ -101,3 +108,553 @@ a .fa {
 td a.dropdown-menu strong i, td a.dropdown-menu strong {
     color: #222;
 }
+
+header > h1{
+  color: #222;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
